<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddEtudiant">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_label"
        style="@style/text" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/input"
        android:inputType="textPersonName"
        android:hint="@string/hint_nom"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prenom_label"
        style="@style/text" />

    <EditText
        android:id="@+id/prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/input"
        android:inputType="textPersonName"
        android:hint="@string/hint_prenom"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ville_label"
        style="@style/text" />

    <Spinner
        android:id="@+id/ville"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/villes"
        style="@style/input" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexe_label"
        style="@style/text" />

    <RadioGroup
        android:id="@+id/sexe_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <RadioButton
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Homme"
            android:checked="true" />

        <RadioButton
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Femme" />
    </RadioGroup>

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_btn" />

</LinearLayout>